# main

./: README.md  index.html  pyproject.toml  requirements.txt
CSV/train/001/: annotation_CD117 PE-A_CD45 APC-A750-A.csv  annotation_CD34 ECD-A_CD45 APC-A750-A.csv  annotation_SSC-A_CD45 APC-A750-A.csv
CSV/train/002/: annotation_CD117 PE-A_CD45 APC-A750-A.csv  annotation_CD34 ECD-A_CD45 APC-A750-A.csv  annotation_SSC-A_CD45 APC-A750-A.csv
autogate/: __init__.py  cli.py  config.py  eval_f1.py  gates.py  imaging.py  io_fcs.py  pipeline.py  prepare.py  register.py  selector.py  visualize.py
cfg/: annotations.example.yaml  panel.example.yaml
tests/: test_eval_f1.py  test_gates.py  test_imaging.py  test_pipeline_smoke.py  test_prepare.py  test_register.py  test_selector.py
